--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
+}
+
+.visually-hidden {
+	width: 0;
+	height: 0;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	clip: rect(0 0 0 0);
+	clip: rect(0, 0, 0, 0);
+	appearance: none;
+	opacity: 0;
+	position: relative;
 }
