--- a/src/components/Char.css
+++ b/src/components/Char.css
@@ -8,7 +8,7 @@
 	width: 100%;
 	height: 100%;
 	margin: 0;
-	padding: 1em;
+	padding: 1em 0.25em;
 	border: 1px solid #ccc;
 	cursor: pointer;
 	float: left;
@@ -24,4 +24,8 @@
 	color: #fff;
 	background-color: hsl(200, 100%, 25%);
 	border-color: hsl(200, 70%, 15%);
+}
+
+.Char-check:checked + .Char-label * {
+	color: #fff;
 }
